# exai

./: .gitignore  ARCHITECTURE.md  README.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
agents/: __init__.py  analyst.py  crew.py  data_connector.py  knowledge_base.py  optimizer.py  scout.py  tools.py
pages/: 2_🤖_Agents.py
