[project]
name = "exai"
version = "0.1.0"
description = "Autonomous Multi-Agent Energy Optimization System for Dubai Buildings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.11.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.6",
    "streamlit>=1.29.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "plotly>=5.17.0",
    "folium>=0.15.0",
    "qdrant-client>=1.7.0",
    "shap>=0.43.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
]
